# GNTest

./: .gitignore  .gn  BUILD.gn  README.md  run.sh
include/: hello_shared.h
lib/: extra.cc  hello_shared.cc
utils/: debug-utils.h
utils/buildtools/: README.md  get-binary.py  gn.py  ninja.py
utils/buildtools/configs/: .gn  BUILD.gn  BUILDCONFIG.gn  declare_args.gni  graft.gni  graft.py
utils/buildtools/configs/toolchain/: BUILD.gn
utils/buildtools/secondary/: BUILD.gn
