# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# To be used by BUILDCONFIG.gn
config("compiler_defaults") {
    cflags = [
      "-fPIC",
      "-pthread",
      "-Wall",
      "-pedantic",
    ]
    if (is_release) {
      cflags += [
        "-DNDEBUG"
      ]
    } else {
      cflags += [
        "-g"
      ]
    }
    cflags_c = [
      "-std=c11",
    ]
    cflags_cc = [
      "-std=c++14"
    ]
    include_dirs = [ "//include" ]
}

# To be used by BUILDCONFIG.gn
config("executable_config") {
  if (is_linux) {
    ldflags = [
      "-Wl,-rpath,\$ORIGIN/$runtime_dir",
    ]
  }
}
