# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("hello") {
  sources = [
    "//lib/hello.cc",
    "//lib/extra.cc"
  ]

  deps = [
    ":hello_shared",
    ":hello_static",
  ]
}

shared_library("hello_shared") {
  public = [
    "//include/hello_shared.h",
  ]
  sources = [
    "//lib/hello_shared.cc",
    # "//include/hello_shared.h",
  ]

  defines = [ "HELLO_SHARED_IMPLEMENTATION" ]
}

static_library("hello_static") {
  public = [
    # "//include/hello_static.h",
  ]
  sources = [
    "//lib/hello_static.cc",
    # "//include/hello_static.h",
  ]
}
